# ai-knowledge-base

./: .env.example  .gitignore  AGENTS.md  main.py  opencode.json  pyproject.toml
.github/workflows/: daily-collect.yml
.opencode/agents/: analyzer.md  collector.md  organizer.md
.opencode/plugins/: validate.ts
.playwright-cli/: page-2026-05-11T06-29-05-952Z.yml
config/: llm.json  rss_sources.json  sources.json
constants/: analyzers.py
hooks/: check_quality.py  validate_json.py
knowledge/articles/: 2026-05-07-github-agent-skills.json  2026-05-07-github-deepseek-tui.json  2026-05-07-github-deer-flow.json  2026-05-07-github-dexter.json  2026-05-07-github-free-llm-api-resources.json  2026-05-07-github-insforge.json  2026-05-07-github-kronos.json  2026-05-07-github-local-deep-research.json  2026-05-07-github-ruflo.json  2026-05-07-github-scrapling.json  2026-05-07-github-shadowbroker.json  2026-05-07-github-tabpfn.json  2026-05-07-github_trending-agent-skills.json  2026-05-07-github_trending-deepseek-tui.json  2026-05-07-github_trending-deer-flow.json  2026-05-07-github_trending-dexter.json  2026-05-07-github_trending-free-llm-api-resources.json  2026-05-07-github_trending-insforge.json  2026-05-07-github_trending-kronos.json  2026-05-07-github_trending-local-deep-research.json  2026-05-07-github_trending-ruflo.json  2026-05-07-github_trending-scrapling.json  2026-05-07-github_trending-shadowbroker.json  2026-05-07-hn-programbench.json  (+553 more)
specs/: agent-prd.md  coding-standards.md  github-trending-skill.md  project-vision.md
src/: main.py  mcp_knowledge_server.py
(+152 files in other folders)
